fixed truncate

--- a/client/src/components/add-answer/add-answer.scss
+++ b/client/src/components/add-answer/add-answer.scss
@@ -12,8 +12,7 @@
     align-items: center;
     background-color: #222831;
     color: #ffffff;
-    padding: 10px;
-    padding-left: 14px;
+    padding: 15px 20px;
     p:nth-child(1) {
       font-size: 20px;
       margin-bottom: 10px;
